main/bkit/parser/.antlr/BKITParser.py
# Generated from /home/khoadodox/Desktop/HK201/PPL/ASM2/initial/src/main/bkit/parser/BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "';'", "':'", "'Var'", "'Body'", 
                     "'Break'", "'Continue'", "'Do'", "'Else'", "'ElseIf'", 
                     "'EndBody'", "'EndIf'", "'EndFor'", "'EndWhile'", "'For'", 
                     "'Function'", "'If'", "'Parameter'", "'Return'", "'EndDo'", 
                     "'Then'", "'While'", "<INVALID>", "'!'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "','", "'('", 
                     "')'", "'['", "']'", "'{'", "'}'", "'.'", "'='" ]

    symbolicNames = [ "<INVALID>", "ID", "SEMI", "COLON", "VAR", "BODY", 
                      "BREAK", "CONTINUE", "DO", "ELSE", "ELSEIF", "ENDBODY", 
                      "ENDIF", "ENDFOR", "ENDWHILE", "FOR", "FUNCTION", 
                      "IF", "PARAMETER", "RETURN", "ENDDO", "THEN", "WHILE", 
                      "SIGN", "UNLOGICAL", "MULTIPLYING", "ADDING", "BINLOGICAL", 
                      "RELATIONAL", "COMMA", "LP", "RP", "LS", "RS", "LB", 
                      "RB", "DOT", "ASSIGN", "INT", "FLOAT", "BOOLEAN", 
                      "ESCP_SQN", "STRING", "WS", "COMMENT", "ILLEGAL_ESCAPE", 
                      "UNCLOSE_STRING", "UNTERMINATED_COMMENT", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl_list = 1
    RULE_var_declist = 2
    RULE_var_list = 3
    RULE_func_declist = 4
    RULE_func_prime = 5
    RULE_variable_decl = 6
    RULE_variable_list = 7
    RULE_varlist = 8
    RULE_var_decl = 9
    RULE_index_list = 10
    RULE_func_decl = 11
    RULE_parameter = 12
    RULE_parameter_list = 13
    RULE_param = 14
    RULE_body = 15
    RULE_stmtlst = 16
    RULE_stmtlist = 17
    RULE_stmttail = 18
    RULE_stmt = 19
    RULE_assign_stmt = 20
    RULE_if_stmt = 21
    RULE_elif_stmt_list = 22
    RULE_elif_stmt = 23
    RULE_else_stmt = 24
    RULE_for_stmt = 25
    RULE_while_stmt = 26
    RULE_dowhile_stmt = 27
    RULE_break_stmt = 28
    RULE_continue_stmt = 29
    RULE_call_stmt = 30
    RULE_return_stmt = 31
    RULE_index_op = 32
    RULE_expr = 33
    RULE_expr0 = 34
    RULE_expr1 = 35
    RULE_expr2 = 36
    RULE_expr3 = 37
    RULE_expr4 = 38
    RULE_expr5 = 39
    RULE_expr6 = 40
    RULE_expr7 = 41
    RULE_expr8 = 42
    RULE_call_list = 43
    RULE_calltail = 44
    RULE_callee = 45
    RULE_array = 46
    RULE_array_elelist = 47
    RULE_array_elelst = 48
    RULE_all_literal = 49
    RULE_literal = 50

    ruleNames =  [ "program", "decl_list", "var_declist", "var_list", "func_declist", 
                   "func_prime", "variable_decl", "variable_list", "varlist", 
                   "var_decl", "index_list", "func_decl", "parameter", "parameter_list", 
                   "param", "body", "stmtlst", "stmtlist", "stmttail", "stmt", 
                   "assign_stmt", "if_stmt", "elif_stmt_list", "elif_stmt", 
                   "else_stmt", "for_stmt", "while_stmt", "dowhile_stmt", 
                   "break_stmt", "continue_stmt", "call_stmt", "return_stmt", 
                   "index_op", "expr", "expr0", "expr1", "expr2", "expr3", 
                   "expr4", "expr5", "expr6", "expr7", "expr8", "call_list", 
                   "calltail", "callee", "array", "array_elelist", "array_elelst", 
                   "all_literal", "literal" ]

    EOF = Token.EOF
    ID=1
    SEMI=2
    COLON=3
    VAR=4
    BODY=5
    BREAK=6
    CONTINUE=7
    DO=8
    ELSE=9
    ELSEIF=10
    ENDBODY=11
    ENDIF=12
    ENDFOR=13
    ENDWHILE=14
    FOR=15
    FUNCTION=16
    IF=17
    PARAMETER=18
    RETURN=19
    ENDDO=20
    THEN=21
    WHILE=22
    SIGN=23
    UNLOGICAL=24
    MULTIPLYING=25
    ADDING=26
    BINLOGICAL=27
    RELATIONAL=28
    COMMA=29
    LP=30
    RP=31
    LS=32
    RS=33
    LB=34
    RB=35
    DOT=36
    ASSIGN=37
    INT=38
    FLOAT=39
    BOOLEAN=40
    ESCP_SQN=41
    STRING=42
    WS=43
    COMMENT=44
    ILLEGAL_ESCAPE=45
    UNCLOSE_STRING=46
    UNTERMINATED_COMMENT=47
    ERROR_CHAR=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl_list(self):
            return self.getTypedRuleContext(BKITParser.Decl_listContext,0)


        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.decl_list()
            self.state = 103
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declist(self):
            return self.getTypedRuleContext(BKITParser.Var_declistContext,0)


        def func_declist(self):
            return self.getTypedRuleContext(BKITParser.Func_declistContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_decl_list




    def decl_list(self):

        localctx = BKITParser.Decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.VAR:
                self.state = 105
                self.var_declist()


            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.FUNCTION:
                self.state = 108
                self.func_declist()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_decl(self):
            return self.getTypedRuleContext(BKITParser.Variable_declContext,0)


        def var_list(self):
            return self.getTypedRuleContext(BKITParser.Var_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_var_declist




    def var_declist(self):

        localctx = BKITParser.Var_declistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_declist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.variable_decl()
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.VAR:
                self.state = 112
                self.var_list()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_decl(self):
            return self.getTypedRuleContext(BKITParser.Variable_declContext,0)


        def var_list(self):
            return self.getTypedRuleContext(BKITParser.Var_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_var_list




    def var_list(self):

        localctx = BKITParser.Var_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.variable_decl()
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.VAR:
                self.state = 116
                self.var_list()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_decl(self):
            return self.getTypedRuleContext(BKITParser.Func_declContext,0)


        def func_prime(self):
            return self.getTypedRuleContext(BKITParser.Func_primeContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_func_declist




    def func_declist(self):

        localctx = BKITParser.Func_declistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_func_declist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.func_decl()
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.FUNCTION:
                self.state = 120
                self.func_prime()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_primeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_decl(self):
            return self.getTypedRuleContext(BKITParser.Func_declContext,0)


        def func_prime(self):
            return self.getTypedRuleContext(BKITParser.Func_primeContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_func_prime




    def func_prime(self):

        localctx = BKITParser.Func_primeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_func_prime)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.func_decl()
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.FUNCTION:
                self.state = 124
                self.func_prime()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def variable_list(self):
            return self.getTypedRuleContext(BKITParser.Variable_listContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_variable_decl




    def variable_decl(self):

        localctx = BKITParser.Variable_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_variable_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(BKITParser.VAR)
            self.state = 128
            self.match(BKITParser.COLON)
            self.state = 129
            self.variable_list()
            self.state = 130
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(BKITParser.Var_declContext,0)


        def varlist(self):
            return self.getTypedRuleContext(BKITParser.VarlistContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_variable_list




    def variable_list(self):

        localctx = BKITParser.Variable_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_variable_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.var_decl()
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.COMMA:
                self.state = 133
                self.varlist()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(BKITParser.COMMA, 0)

        def var_decl(self):
            return self.getTypedRuleContext(BKITParser.Var_declContext,0)


        def varlist(self):
            return self.getTypedRuleContext(BKITParser.VarlistContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_varlist




    def varlist(self):

        localctx = BKITParser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_varlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(BKITParser.COMMA)
            self.state = 137
            self.var_decl()
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.COMMA:
                self.state = 138
                self.varlist()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def index_list(self):
            return self.getTypedRuleContext(BKITParser.Index_listContext,0)


        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def all_literal(self):
            return self.getTypedRuleContext(BKITParser.All_literalContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_var_decl




    def var_decl(self):

        localctx = BKITParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_var_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(BKITParser.ID)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.LS:
                self.state = 142
                self.index_list()


            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ASSIGN:
                self.state = 145
                self.match(BKITParser.ASSIGN)
                self.state = 146
                self.all_literal()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Index_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LS(self):
            return self.getToken(BKITParser.LS, 0)

        def INT(self):
            return self.getToken(BKITParser.INT, 0)

        def RS(self):
            return self.getToken(BKITParser.RS, 0)

        def index_list(self):
            return self.getTypedRuleContext(BKITParser.Index_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_index_list




    def index_list(self):

        localctx = BKITParser.Index_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_index_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(BKITParser.LS)
            self.state = 150
            self.match(BKITParser.INT)
            self.state = 151
            self.match(BKITParser.RS)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.LS:
                self.state = 153
                self.index_list()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def body(self):
            return self.getTypedRuleContext(BKITParser.BodyContext,0)


        def parameter(self):
            return self.getTypedRuleContext(BKITParser.ParameterContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_func_decl




    def func_decl(self):

        localctx = BKITParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_func_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(BKITParser.FUNCTION)
            self.state = 157
            self.match(BKITParser.COLON)
            self.state = 158
            self.match(BKITParser.ID)
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARAMETER:
                self.state = 159
                self.parameter()


            self.state = 162
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def param(self):
            return self.getTypedRuleContext(BKITParser.ParamContext,0)


        def parameter_list(self):
            return self.getTypedRuleContext(BKITParser.Parameter_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_parameter




    def parameter(self):

        localctx = BKITParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_parameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(BKITParser.PARAMETER)
            self.state = 165
            self.match(BKITParser.COLON)
            self.state = 166
            self.param()
            self.state = 168
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.COMMA:
                self.state = 167
                self.parameter_list()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(BKITParser.COMMA, 0)

        def param(self):
            return self.getTypedRuleContext(BKITParser.ParamContext,0)


        def parameter_list(self):
            return self.getTypedRuleContext(BKITParser.Parameter_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_parameter_list




    def parameter_list(self):

        localctx = BKITParser.Parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_parameter_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.match(BKITParser.COMMA)
            self.state = 171
            self.param()
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.COMMA:
                self.state = 172
                self.parameter_list()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def index_list(self):
            return self.getTypedRuleContext(BKITParser.Index_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_param




    def param(self):

        localctx = BKITParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.match(BKITParser.ID)
            self.state = 177
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.LS:
                self.state = 176
                self.index_list()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def stmtlst(self):
            return self.getTypedRuleContext(BKITParser.StmtlstContext,0)


        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_body




    def body(self):

        localctx = BKITParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.match(BKITParser.BODY)
            self.state = 180
            self.match(BKITParser.COLON)
            self.state = 181
            self.stmtlst()
            self.state = 182
            self.match(BKITParser.ENDBODY)
            self.state = 183
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtlstContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declist(self):
            return self.getTypedRuleContext(BKITParser.Var_declistContext,0)


        def stmtlist(self):
            return self.getTypedRuleContext(BKITParser.StmtlistContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_stmtlst




    def stmtlst(self):

        localctx = BKITParser.StmtlstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_stmtlst)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 186
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.VAR:
                self.state = 185
                self.var_declist()


            self.state = 189
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.state = 188
                self.stmtlist()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(BKITParser.StmtContext,0)


        def stmttail(self):
            return self.getTypedRuleContext(BKITParser.StmttailContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_stmtlist




    def stmtlist(self):

        localctx = BKITParser.StmtlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_stmtlist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            self.stmt()
            self.state = 193
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.state = 192
                self.stmttail()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmttailContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(BKITParser.StmtContext,0)


        def stmttail(self):
            return self.getTypedRuleContext(BKITParser.StmttailContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_stmttail




    def stmttail(self):

        localctx = BKITParser.StmttailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 36, self.RULE_stmttail)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 195
            self.stmt()
            self.state = 197
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                self.state = 196
                self.stmttail()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_stmt(self):
            return self.getTypedRuleContext(BKITParser.Assign_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(BKITParser.If_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(BKITParser.For_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(BKITParser.While_stmtContext,0)


        def dowhile_stmt(self):
            return self.getTypedRuleContext(BKITParser.Dowhile_stmtContext,0)

